syntax = "proto3";

package proto.shortener;

option go_package = "github.com/romanp1989/go-shortener/internal/grpc/proto/shortener";

message Item {
  string correlation_id = 1;
  string url = 2;
}

message UserURL {
  string short_url = 1;
  string original_url = 2;
}